<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1"
        tools:context="com.example.android.justjava.MainActivity">


        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:maxLines="1" />

        <TextView
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/top"
            style="@style/HeaderTextStyle" />

        <CheckBox
            android:id="@+id/whippedCream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/whipped_cream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/choco"
            android:textSize="16sp" />

        <TextView
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/quantity"
            style="@style/HeaderTextStyle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:onClick="increment"
                android:text="@string/incr" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:text="@string/ini_quan"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:onClick="decrement"
                android:text="@string/dcr" />

        </LinearLayout>

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:padding="10sp"-->
        <!--android:text="order summary"-->
        <!--android:textAllCaps="true"-->
        <!--android:textSize="16sp"/>-->

        <!--<TextView-->
        <!--android:id="@+id/price_text_view"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:padding="10sp"-->
        <!--android:text=" $ 0"-->
        <!--android:textColor="@android:color/black"-->
        <!--android:textSize="16sp" />-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textAllCaps="true" />

    </LinearLayout>
</ScrollView>